# GPT-PANELIN-V3.3

./: .coverage  .dockerignore  .env.agno.example  .env.example  .eslintrc.json  .gitignore  AGENT_ORCHESTRATION_GUIDE.md  AGNO_FRAMEWORK_RESEARCH.md  AGNO_MIGRATION.md  AUDIT_PROMPTS.md  AUTOCONFIG_QUICK_START.md  AUTOMATED_GPT_CREATION_LIMITATIONS.md  AUTOPILOT_UPDATE_PLAN.md  Aleros -2.rtf  BACKGROUND_TASKS_GUIDE.md  BRANCH_CLEANUP_SUMMARY.md  CHANGELOG.md  CHAT_FEATURE_README.md  CLEANUP_QUICK_START.md  CLEANUP_README.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  CURRENT_MERGE_PLAN.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CONFIG.md  DEPLOYMENT_DOCS_INDEX.md  DEPLOYMENT_GENERATION_SUMMARY.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_WORKFLOW_DIAGRAM.md  Dockerfile  Dockerfile.agentos  Dockerfile.agno  Dockerfile.production  EVOLUCIONADOR_FINAL_REPORT.md  GCP_NEXT_STEPS_ANALYSIS.md  GCP_PHASE1_IMPLEMENTATION.md  GCP_README.md  GITHUB_ACTIONS_GPT_CONFIG.md  (+113 more)
.evolucionador/: COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  README_VALIDATOR.md  VALIDATOR_GUIDE.md  VALIDATOR_IMPLEMENTATION.md  agent.yaml  examples_validator.py  requirements.txt
.github/: copilot-instructions.md
Integracion-Chatbot/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
api/: index.py
archive/: BOOT_PRS_COMPARISON.md  BRANCH_REVIEW_REPORT.md  PULL_REQUESTS_REVIEW.md
artifacts/: source_manifest.json
backend/: Dockerfile  init_db.sql  kb_manager.py  main.py
background_tasks/: README.md  __init__.py  api.py  cli.py  queue.py  (+4 more)
(+474 files in other folders)
