[project]
name = "panelin"
version = "4.1.0"
description = "BMC Uruguay - Panelin Quotation Engine + Agno Agentic Architecture"
requires-python = ">=3.10"

[project.scripts]
app = "app:app"
agno-app = "src.app:app"

[tool.pytest.ini_options]
testpaths = ["panelin_v4/tests", "src/tests"]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py311"
